--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <tr>
     <td><a href="thelema"><image src="images/unicursal.svg" alt="Unicursal Hexagram" style="width:100px;height:100px;"></a><br>The Holy Books<br>of Thelema</td>
     <td><br></td>
-    <td><a href="babalon"><image src="images/babalon.svg" alt="Babalon Sigil" style="width:100px;height:100px;"></a><br>Babalon<br>& Forititude</td>
+    <td><a href="babalon"><image src="images/babalon.svg" alt="Babalon Sigil" style="width:100px;height:100px;"></a><br>Babalon<br>& Fortitude</td>
     <td><br></td>
     <td><a href="fortean"><image src="images/93.svg" alt="93 Sigil" style="width:100px;height:100px;"></a><br>Fortean<br>Phrases</td>
   </tr>
 </table></p>
-<p style="text-align: center;"><h3 style="text-align: center;">Æon of Osirus</h1></p>
+<p style="text-align: center;"><h3 style="text-align: center;">Æon of Osiris</h1></p>
 <p style="text-align: center;"><table align="center" style="text-align: center;">
   <tr>
     <td><a href="tanach"><image src="images/hexagram.svg" alt="Hexaram" style="width:100px;height:100px;"></a><br>The<br>Tanakh</td>
