--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     <td><a href="fortean"><image src="images/93.svg" alt="93 Sigil" style="width:100px;height:100px;"></a><br>Fortean<br>Phrases</td>
   </tr>
 </table></p>
-<p style="text-align: center;"><h3 style="text-align: center;">Æon of Osiris</h1></p>
+<p style="text-align: center;"><table align="center" style="text-align: center;">
+  <tr>
+    <td><br></td>
+    <td><br></td>
+    <td><a href="typhonian"><image src="images/aossic.svg" alt="Aossic S'lba" style="width:100px;height:100px;"></a><br>Typhonian</td>
+		<td><br></td>
+    <td><br></td>
+	</tr>
+</table></p><p style="text-align: center;"><h3 style="text-align: center;">Æon of Osiris</h1></p>
 <p style="text-align: center;"><table align="center" style="text-align: center;">
   <tr>
     <td><a href="tanach"><image src="images/hexagram.svg" alt="Hexaram" style="width:100px;height:100px;"></a><br>The<br>Tanakh</td>
