--- a/typhonian/index.html
+++ b/typhonian/index.html
@@ -16,7 +16,7 @@
 <hr>
 <div><dt>Matches</dt></div>
 <div><dt><br></dt></div>
-<div><dt><input type="checkbox" id="showipsos"  onclick="toggleBoxes()" checked style="height:19px;width:19px;">Liber Pennae Praenumbra</dt><dd id="ipsoscount">0</dd></div>
+<div><dt><input type="checkbox" id="showipsos"  onclick="toggleBoxes()" checked style="height:19px;width:19px;">Pennae Praenumbra</dt><dd id="ipsoscount">0</dd></div>
 <div><dt><input type="checkbox" id="showslba"  onclick="toggleBoxes()" checked style="height:19px;width:19px;">Wisdom of S'lba</dt><dd id="slbacount">0</dd></div>
 <hr>
 <div class="out" id="ipsos" style="display:none;"><strong>Liber Pennae Praenumbra</strong><div><ol id="ipsosmatch">N/A</ol></div></div>
