--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <div class="top" id="head">
 <nav>
 	<a href="about"> <span>About</span></a>
-	<a href="https://www.amazon.com/Complete-SECRET-CIPHER-UfOnauts/dp/171864535X/ref=sr_1_1"><span>Get the Book</span></a>
+	<a href="https://gematriaresearch.blogspot.com/" target="_blank"><span>Gematria Blog</span></a>
 </nav>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
