--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@ Beyond parsing the Alphanumeric Qabbala cipher values, this version of this tool
 </article>
 <nav>
 	<a href="../"> <span>Back</span></a>
-	<a href="https://www.amazon.com/Complete-SECRET-CIPHER-UfOnauts/dp/171864535X/ref=sr_1_1"><span> Get the Book</span></a>
+	<a href="https://gematriaresearch.blogspot.com/" target="_blank"><span>Gematria Blog</span></a>
 </nav>
 </div>
 
