--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<title>Secret Cipher Search</title>
+<title>Secret Cipher (AQ)</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta charset="UTF-8">
 <link rel="icon" href="favicon.png" type="image/png" sizes="16x16">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<p style="text-align: center;"><h1 style="text-align: center;">Secret Cipher Search</h1></p>
+<p style="text-align: center;"><h1 style="text-align: center;">Secret Cipher (AQ)</h1></p>
 <p style="text-align: center;"><h3 style="text-align: center;">Æon of Horus</h3></p>
 <p style="text-align: center;"><table align="center" style="text-align: center;">
   <tr>
